Changelog/readme for 0.18.0 release